--- a/src/Services/Basket/Basket.APİ/appsettings.json
+++ b/src/Services/Basket/Basket.APİ/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "Database": "Server=localhost;Port=5433;Database=BasketDB;User Id=postgres;Password=postgres;Include Error Detail=true",
+    "Redis": "localhost:6379"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
