Finished basket service Started discount service(grpc)

--- a/src/Services/Basket/Basket.APİ/Dockerfile.original
+++ b/src/Services/Basket/Basket.APİ/Dockerfile.original
@@ -9,18 +9,17 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Services/Basket/Basket.APİ/Basket.API.csproj", "Services/Basket/Basket.APİ/"]
-COPY ["BuildingBlocks/BuildingBlocks/BuildingBlocks.csproj", "BuildingBlocks/BuildingBlocks/"]
-RUN dotnet restore "./Services/Basket/Basket.APİ/./Basket.API.csproj"
+COPY ["Services/Basket/Basket.APİ/Basket.APİ.csproj", "Services/Basket/Basket.APİ/"]
+RUN dotnet restore "./Services/Basket/Basket.APİ/./Basket.APİ.csproj"
 COPY . .
 WORKDIR "/src/Services/Basket/Basket.APİ"
-RUN dotnet build "./Basket.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./Basket.APİ.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Basket.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./Basket.APİ.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Basket.API.dll"]
+ENTRYPOINT ["dotnet", "Basket.APİ.dll"]
