--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -6,6 +6,8 @@ services:
 
   basketdb:
     image: postgres
+  distributedcache:
+    image: redis
 
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
@@ -13,7 +15,14 @@ services:
       context: .
       dockerfile: Services/Catalog/Catalog.API/Dockerfile
 
+  basket.api:
+    image: ${DOCKER_REGISTRY-}basketapi
+    build:
+      context: .
+      dockerfile: Services/Basket/Basket.APİ/Dockerfile
+
 volumes: 
   postgres_catalog:
   postgres_basket:
+
 
