--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -21,8 +21,15 @@ services:
       context: .
       dockerfile: Services/Basket/Basket.APİ/Dockerfile
 
+  discount.grpc:
+    image: ${DOCKER_REGISTRY-}discountgrpc
+    build:
+      context: .
+      dockerfile: Services/Discount/Discount.Grpc/Dockerfile
+
 volumes: 
   postgres_catalog:
   postgres_basket:
+
 
 
